Square tottally working

--- a/app/views/calculation_templates/square_results.html.erb
+++ b/app/views/calculation_templates/square_results.html.erb
@@ -2,9 +2,11 @@
 
 <dl>
    <dt>Number</dt>
-   <dd>1234</dd>
+   <dd><%= @num %></dd>
 
    <dt>Square</dt>
-   <dd>1234</dd>
+   <dd><%= @square_of_num %></dd>
 
 </dl>
+
+<a href="/square/new">Calculate another square
