Progress with random new and random results

--- a/app/views/calculation_templates/random_new.html.erb
+++ b/app/views/calculation_templates/random_new.html.erb
@@ -1,10 +1,12 @@
+
 <h1></h1>
 
 <form action="/square/results">
-  <label for="giraffe">Enter a number</label>
+  <label for="giraffe">Minimum</label>
+  <label for="giraffe">Maximum</label>
   <input id="giraffe" type="text" placeholder="What number do you want to square?" name="elephant">
 
   <button>Calculate square</button>
 </form>
 
-<a href="/square/results">Calculate square
+<a href="/random/new">Pick another random number
