not much changes

--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -7,4 +7,4 @@
   <button>Calculate square</button>
 </form>
 
-<a href="/square/results">Calculate square
+<a href="/random/results"=>Calculate square
