all features are functional

--- a/app/views/calculation_templates/random_new.html.erb
+++ b/app/views/calculation_templates/random_new.html.erb
@@ -1,12 +1,22 @@
 
 <h1></h1>
 
-<form action="/square/results">
-  <label for="giraffe">Minimum</label>
-  <label for="giraffe">Maximum</label>
-  <input id="giraffe" type="text" placeholder="What number do you want to square?" name="elephant">
+ <form action="/random/results">
+  <div>
+    <label for="min_input">Minimum</label>
+    <input id="min_input" text="text" name="user_min" placeholder="E.g. 1.5">
+  </div>
+  
+  <div>
+    <label for="max_input">Maximum</label>
+    <input id="max_input" text="text" name="user_max" placeholder="E.g. 4.5">
+  </div>
+ 
 
-  <button>Calculate square</button>
+  <button>Pick random number</button>
 </form>
 
 <a href="/random/new">Pick another random number
+
+ 
+
