--- a/app/views/calculation_templates/payment_new.html.erb
+++ b/app/views/calculation_templates/payment_new.html.erb
@@ -1,6 +1,6 @@
 <h1></h1>
 
-<form action="/payment/new">
+<form action="/payment/results">
   <div>
     <label for="apr_input"> APR</label>
     <input id="apr_input" text="text" name="user_apr" placeholder="E.g. 5.42">
@@ -19,5 +19,3 @@
   <button>Calculate monthly payment</button>
 
 </form>
-
-<a href="/random/results"=>Calculate monthly payment
