--- a/app/views/calculation_templates/root_results.html.erb
+++ b/app/views/calculation_templates/root_results.html.erb
@@ -5,7 +5,7 @@
    <dd><%= @num %></dd>
 
   <dt>Square Root</dt>
-  <dd><%= @num %></dd>
+  <dd><%= @square_of_num %></dd>
 </dl>
 
 <a href="/square_root/new">Calculate another square root</a>
